@@ -109,6 +109,12 @@ public:
 	 */
 	void	UpdateCatTabTitles();
 
+	/**
+	 * Button update (enables / disables) depending on whether completed
+	 * files exist or not
+	 */
+	void UpdateBtnClearDownloads();
+
 	
 	/**
 	 * Call this function before displaying the dialog.
